css/iff.css
/* GENERAL */

#about-logo {
	width: 300px;
	height: 300px;
	overflow: hidden;
	border: 1px solid black;
	display: inline-block;
	text-align: center;
}

#about-logo-bg {
	position: absolute;
	z-index: 1;
}

#about-logo-letters {
	position: absolute;
	z-index: 2;
}

#about-desc {
	display: inline-block;
}
.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
}
 
.video-container iframe,
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#social-media {
	display: inline-block;
	float: right;
	top: 50%;
	line-height: 80px;
	
}

.social-media-icon {
	padding-left: 5px;
	padding-right: 5px;
}

@font-face {
    font-family: "Kazimir Light";
    src: url("../assets/Kazimir_Light.woff") format('woff');
}

@font-face {
    font-family: "Basis Grotesque Bold";
    src: url("../assets/basis_grotesque_bold.otf") format("opentype");
}

@font-face {
    font-family: "Basis Grotesque Regular";
    src: url("../assets/basis_grotesque_regular.otf") format("opentype");
}

h1 {
	font-size: 43px;
	font-family: "Basis Grotesque Bold", sans-serif;
	color: #42744D;
}

h2 {
	font-size: 32px;
}

h3 {
	font-size: 24px;
	color: #EC5536;
	padding-bottom: 10px;
}

h4 {
	color: #42744D;
	font-family: "Basis Grotesque Bold", sans-serif;
}

p {
	font-family: "Kazimir Light", Georgia, serif;
	font-size: 20px;
}

a {
	text-decoration: none;
    border-bottom: 7px solid #FAD2C1;
    text-underline-position: under;
    -webkit-text-underline-position: under;
  	-ms-text-underline-position: below;
  	text-underline-position: under; 
  	display: inline-block;line-height: 1em;
  	/*transition: 0.4s; */
}

a:link, a:visited, a:hover, a:active { color: black }

a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

section a:hover {
	color: #fff;
    text-decoration: none;
    background-color: #FAD2C1; 
    box-shadow:2px -5px 0 #FAD2C1, -2px -5px 0 #FAD2C1,
    2px 2px 0 #FAD2C1, -2px 2px 0 #FAD2C1;
}

.submit-section a:hover {
	color: #fff;
	box-shadow: 0px 0px 0px rgba(0,0,0,0);
	background-color: rgba(0, 0, 0, 0);
}

a:active {
    text-decoration: none;
}

@media (min-width: 767px) {
	.container {
		width: 90%;
	}
}

@media (min-width: 767px) {
    .news-section, .about-section {
        padding-top: 100px;
    }
}

/* NAVBAR */

.navbar {
	font-size: 12px;
	font-family: "Basis Grotesque Bold", sans-serif;
	background-color: #fff;
	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
	-moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
	box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
}

.navbar img {
	margin-top:-10px;
}

.navbar-brand h3 {
	font-size: 43px;
	font-family: "Kazimir Light", Georgia, serif;
}

/*!
 * Start Bootstrap - Scrolling Nav HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

 .navbar-nav > li{
  padding-left:10px;
  padding-right:10px;
}

.navbar-fixed-top {
    min-height: 80px;
}

.navbar-nav > li > a {
    padding-top: 0px;
    padding-bottom: 0px;
    line-height: 80px;
}

@media (min-width: 767px) {

	.navbar-nav > li > a:after {
	  content: '';
	  position: absolute;
	  bottom: 0;
	  left: 0;
	  width: 0%;
	  border-bottom: 2px solid #EC5536;
	  transition: 0.4s;
	}

}

.navbar-nav > li > a:hover:after {
  width: 100%;
}

@media (max-width: 767px) {
    .navbar-nav > li > a {
        line-height: 20px;
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .navbar-fixed-top {
        min-height: 50px;
    }

    .navbar h3 {
        margin-top: -5px;
    }
}

.navbar a {
	text-decoration: none;
    border-bottom: 0px;
}

/* INTRO */

section {
	width: 100%;
	padding-top: 50px;
	padding-bottom: 50px;
}

.intro-section {
    height: 500px;
    padding-top: 150px;
    text-align: center;
    background: #eee;
    background-image: url('../assets/home.jpg');
}

@media (min-width: 767px) {
    .intro-section {
    	margin-top: 80px;
    }

    #intro-desc {
	    width: 40%;
	}
}

.intro-section h1 {
    color: #EC5536;
}

#intro-desc {
    display: inline-block;
    color: #EC5536;
}

/* LATEST NEWS */

.news-section {
	height: 1100px;
    text-align: center;
}

@media (min-width: 767px) {
    .news-section {
    	height: 1000px;
    }
}

.news-item {
	padding-top: 10px;
    display: inline-block;
    width: 370px;
    margin: 0 auto;
}

@media (min-width: 767px) {
    .news-item-second {
        margin-top: 300px;
    }
}

.news-item-second {
	vertical-align: top;
}

.news-date {
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
    transform-origin: 100% 100%;
    margin-top: -35px;
    color: #EC5536;
    display: block;
	float: left;
}

.news-image img {
	border-style: solid;
    border-width: 4px 4px 4px 4px;
    border-color: #EC5536;
    display: inline-block;
    float: right;
}

.news-desc {
	padding-top: 10px;
	width: 300px;
	text-align: left;
	float: right;
}

/* ABOUT SECTION */ 

.about-section {
	height: 500px;
    text-align: left;
    background: #fff;
}

/* SUBMIT SECTION */

.submit-section {
    padding-top: 50px;
    text-align: center;
    background: #fdf1ec;
    height: 400px;
}

.submit-section p {
	text-align: left;
	color: #FCB596;
}

#submit-button {
	width: 300px;
	font-size: 43px;
	color: #EC5536;
	font-family: "Kazimir Light";
	padding: 20px 30px 20px 30px;
	border-style: double;
    border-width: 8px 8px 8px 8px;
	border-color: #EC5536;
	display: inline-block;
	transition: 0.4s;
	padding-top: 40px;
	padding-bottom: 35px;
}

.submit-section a {
	text-decoration: none;
    border-bottom: none;
    text-underline-position: none;
    -webkit-text-underline-position: none;
  	-ms-text-underline-position: below;
  	text-underline-position: none; 
  	display: inline-block;line-height: 10px;
}

@media (min-width: 767px) {

	.submit-section {
	    height: 500px;
	}

	#submit-deadline {
		-webkit-transform: rotate(90deg);
	    -moz-transform: rotate(90deg);
	    -o-transform: rotate(90deg);
	    -ms-transform: rotate(90deg);
	    transform: rotate(90deg);
	    transform-origin: 100% 100%;
	    display: block;
		float: right;
	}

	#submit-button {
		margin-top: 65px;
	}
}

/* SPONSOR IMAGE */

.sponsors-section {
	text-align: center;
}

.sponsors-section h1 {
	padding-bottom: 20px;
}

.sponsor-image {
	margin: 20px 20px 20px 20px;
	padding-bottom: 20px;
	width: 300px;
	display: inline-block;
}

/* FOOTER */

.footer {
	border-style: solid;
    border-width: 6px 6px 6px 6px;
    border-color: #42744D;
    min-height: 350px;
    background-image: url('../assets/logo_footer.png');
    background-repeat:   no-repeat;
    background-position: 40px 20px; 
    overflow: hidden;
}

.footer p {
	font-size: 14px;
	text-align: center;
}

#footer-desc {
	display: block;
	vertical-align: top;
}

#footer-contact {
	display: block;
	vertical-align: top;
}

#footer-media p {
	display: block;
	vertical-align: top;
	text-align: center;
	font-family: "Basis Grotesque Bold", sans-serif;
	border-bottom: 0px solid #FAD2C1;
	color: #42744D;
}

@media (min-width: 767px) {

	.footer p {
		text-align: left;
	}

	#footer-desc {
		width: 25%;
		margin-right: 10%;
		vertical-align: top;
		float: left;
		padding-top: 20px;
	}

	#footer-contact {
		width: 25%;
		vertical-align: top;
		margin-right: 10%;
		padding-top: 20px;
		float: left;
	}

	#footer-media {
		width: 25%;
		float: left;
		vertical-align: top;
		padding-top: 20px;
		text-align: left;
	}

	.footer hr {
		padding-top: 20px;
		clear: both;
	}

	#copyright {
		clear: both;
	}
}



/*
@media (max-width: 768px) {
	html, body {
		width: auto !important;
		overflow-x: hidden !important;
	}
}*/

.year {
	font-size: 26px;
	font-family: "Basis Grotesque Bold", sans-serif;
	color: #C2E5C9;
}

.submissions-section {
	padding-top: 100px;
	height: 1000px;
}

#fees-and-deadlines .row {
	padding-top: 10px;
	padding-bottom: 10px;
}

#fees-and-deadlines .cost{
	color: #7EB389;
}

.deadline {
	color: #EC5536;
}

#gate {
	position: absolute;
	bottom: -40%;
	left: 50%;
	z-index: -1;
}

.events-section {
	padding-top: 100px;
	height: 700px;
}

.top-section {
	padding-top: 100px;
}

